# tuic

./: .env  .gitignore  .gitmodules  Cargo.toml  Cross.toml  LLM.md  README.md  librust_out.rlib
.cargo/: config.toml
.cross/: Dockerfile
.githooks/: pre-commit
.github/: Dockerfile  cliff.toml  target.toml
.github/workflows/: ci.yml  docker-publish.yml  release-publish.yml  rust-build.yml
crates/tuic-client/: Cargo.toml
crates/tuic-client/src/: config.rs  error.rs  main.rs  plugin.rs  shared.rs  tunnel.rs  utils.rs
crates/tuic-server/: Cargo.toml
crates/tuic-server/src/: config.rs  error.rs  lib.rs  main.rs  plugin.rs  restful.rs  tls.rs  utils.rs
crates/tuic-server/src/legacy/: mod.rs
crates/tuic-tests/: Cargo.toml
crates/tuic-tests/tests/: concurrency_tests.rs  large_payload_tests.rs
scripts/: install-hooks.sh
tests/: integration_tests.rs
tuic/: Cargo.toml
tuic-client/: Cargo.toml  README.md
tuic-client/src/: config.rs  error.rs  forward.rs  lib.rs  main.rs  plugin.rs  shared.rs  tunnel.rs  utils.rs  wind_adapter.rs
tuic-client/src/connection/: handle_stream.rs  handle_task.rs  mod.rs  socks5.rs
tuic-client/src/socks5/: handle_task.rs  mod.rs  udp_session.rs
tuic-client/tests/: graceful_shutdown.rs
tuic-client/tests/config/: all_relay_options_toml.toml
tuic-core/: Cargo.toml
tuic-core/src/: io.rs  lib.rs  quinn.rs  quinn_impl.rs  tests.rs  unmarshal.rs  utils.rs
tuic-core/src/model/: authenticate.rs  connect.rs  dissociate.rs  heartbeat.rs  mod.rs  packet.rs
tuic-quinn/: Cargo.toml
tuic-quinn/src/: lib.rs
tuic-server/: .gitignore  Cargo.toml  README.md
tuic-server.old/: README.md
tuic-server/src/: acl.pest  acl.rs  acme.rs  camouflage.rs  compat.rs  config.rs  error.rs  h3_quinn_compat.rs  io.rs  lib.rs  log.rs  main.rs  old_config.rs  plugin.rs  restful.rs  server.rs  tls.rs  utils.rs  wind_adapter.rs
tuic-server/src/connection/: authenticated.rs  handle_stream.rs  handle_task.rs  mod.rs  udp_session.rs
tuic-server/src/io/: peekable.rs
tuic-server/src/sniffer/: http.rs  mod.rs  tls.rs
tuic-server/tests/: peekable_tests.rs
tuic-server/tests/config/: valid_toml_config.toml
tuic-tests/: Cargo.toml
tuic-tests/src/: lib.rs
tuic-tests/tests/: camouflage_64mb_test.rs  concurrency_tests.rs  integration_tests.rs  large_payload_tests.rs  sniffer_curl.rs
tuic/src/: lib.rs
tuic/src/model/: packet.rs
tuic/src/protocol/: mod.rs
