[workspace]
members = ["tuic", "tuic-quinn", "tuic-server", "tuic-client"]
resolver = "2"

[workspace.package]
authors = ["EAimTY <ea.imty@gmail.com>", "Itsusinn <sun@ihsin.dev>"]
version = "1.5.0"
rust-version = "1.85.0"
edition = "2024"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/Itsusinn/tuic"

[profile.release]
opt-level = 'z'
debug = 1
lto = true
incremental = false
codegen-units = 1
strip = "debuginfo"
